--- a/back/package.json
+++ b/back/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "back",
+  "name": "application-gestion-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend pour l'application de gestion des utilisateurs",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["express", "api", "gestion", "utilisateurs"],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
